--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -28,6 +28,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
           data-toggle="tooltip"
           title="{% trans 'Compare your number of hits with the number of hits in each class tag in this subject' %}"
         ></i>
+        <i id="cloudyTips" class="fa fa-lightbulb-o" style="display: none" title="Dicas"></i>
       </div>
       <div class="hidden-xs hidden-sm">
         {% trans 'Cloudy' %}
