--- a/dashboards/templates/dashboards/subjects_gantt.html
+++ b/dashboards/templates/dashboards/subjects_gantt.html
@@ -25,7 +25,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style=" padding-left: 10px; ">
         <div style="float:left;font-size:16px; text-align:left; color: #000;">
             <b>{% trans 'Detail of Tasks' %}</b>
-            <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Positions all activities suggested by the teacher on the current subject in a timeline' %}"></i>
+            <i id="ganntInfo" class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Positions all activities suggested by the teacher on the current subject in a timeline' %}"></i>
+            <i id="ganntTips" class="fa fa-lightbulb-o" style="display: none" title="Dicas"></i>
         </div>
         <div style="float:right">
             {% trans '(%) Class' %}
