Adding sad reaction style to avatar

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -56,20 +56,20 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 <div class="head">
                     <div class="face">
                         <div class="topface">
-                            <div class="eye">
+                            <div class="eye eye-left">
                                 <div class="eyelid"></div>
                                 <div class="iris">
                                     <div class="pupile"></div>
                                 </div>
                             </div>
-                            <div class="eye">
+                            <div class="eye eye-right">
                                 <div class="eyelid"></div>
                                 <div class="iris">
                                     <div class="pupile"></div>
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="mouth_container">
                             <div class="mouth"></div>
                         </div>
                     </div>
