--- a/dashboards/static/dashboards/css/avatar.css
+++ b/dashboards/static/dashboards/css/avatar.css
@@ -191,6 +191,106 @@
   fill: #de1212;
 }
 
+.sadReaction .topface {
+  position: relative;
+  height: 2.3rem;
+}
+.sadReaction .eye {
+  width: 2.3rem;
+  height: 2rem;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background-color: darkblue;
+  border: 2px solid #000000;
+  display: flex;
+  align-items: inherit;
+  justify-content: center;
+  overflow: hidden;
+  margin-top: 0.2em;
+  border-bottom: none;
+  position: static;
+}
+.sadReaction .eye:before {
+  content: "";
+  height: 0.7em;
+  position: absolute;
+  top: 2%;
+  width: 2.1rem;
+  background: lightgreen;
+  border-bottom: 2px solid #000;
+  z-index: 2;
+}
+.sadReaction .eye-left:before {
+  transform: rotate(-15deg);
+  left: 14.5%;
+  border-top-right-radius: 1em;
+}
+.sadReaction .eye-right:before {
+  transform: rotate(15deg);
+  right: 15.18%;
+  border-top-left-radius: 1em;
+}
+.sadReaction .eye:after {
+  content: "";
+  height: 0.5em;
+  border-top: 2px solid #000;
+  width: 2.1rem;
+  position: absolute;
+  bottom: 0%;
+  background: lightgreen;
+  z-index: 2;
+}
+.sadReaction .eyelid {
+  width: 1.9rem;
+  height: 0%;
+  background: #000000;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  position: absolute;
+  top: 20%;
+  z-index: 1;
+  animation: blink-sad 2s infinite;
+}
+.sadReaction .iris {
+  width: 1.8rem;
+  height: 1.6rem;
+  background-color: aqua;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border: 2px solid #000000;
+  margin-top: -0.1em;
+}
+.sadReaction .pupile {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-top: 0.3rem;
+  margin-left: 0.45rem;
+}
+.sadReaction .face > div.mouth_container {
+  width: 100%;
+  height: 1.5rem;
+  overflow-y: hidden;
+}
+.sadReaction .mouth {
+  width: 4em;
+  height: 2rem;
+  border: 2px solid #000000;
+  border-top-left-radius: 12em;
+  border-top-right-radius: 12em;
+  border-bottom-color: transparent;
+  margin-top: 1em;
+  background-color: transparent;
+}
+.sadReaction .mouthSpeak {
+  animation: none;
+}
+
 @keyframes blink {
   0%,
   100% {
@@ -199,6 +299,17 @@
 
   50% {
     height: 100%;
+  }
+}
+
+@keyframes blink-sad {
+  0%,
+  100% {
+    height: 0%;
+  }
+
+  50% {
+    height: 80%;
   }
 }
 
@@ -220,6 +331,17 @@
 
   50% {
     height: 100%;
+  }
+}
+
+@-webkit-keyframes blink-sad {
+  0%,
+  100% {
+    height: 0%;
+  }
+
+  50% {
+    height: 80%;
   }
 }
 
