--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -69,6 +69,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 </div>
                             </div>
                         </div>
+                        <div class="tears">
+                            <div class="tear tear-left"></div>
+                            <div class="tear tear-right"></div>
+                        </div>
                         <div class="mouth_container">
                             <div class="mouth"></div>
                         </div>
