--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -57,13 +57,17 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     <div class="face">
                         <div class="topface">
                             <div class="eye eye-left">
-                                <div class="eyelid"></div>
+                                <div class="eyelid-holder">
+                                    <div class="eyelid"></div>
+                                </div>
                                 <div class="iris">
                                     <div class="pupile"></div>
                                 </div>
                             </div>
                             <div class="eye eye-right">
-                                <div class="eyelid"></div>
+                                <div class="eyelid-holder">
+                                    <div class="eyelid"></div>
+                                </div>
                                 <div class="iris">
                                     <div class="pupile"></div>
                                 </div>
