--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -217,6 +217,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                                         <li><a href="{% url 'themes:manage' %}">{% trans 'Theme' %}</a></li>
 														<li><a href="{% url 'webconferences:settings' %}">{% trans 'Web Conference' %}</a></li>
 														<li><a href="{% url 'elastic:settings' %}">{% trans 'Elastic Search' %}</a></li>
+														<li><a href="{% url 'excel:import' %}">{% trans 'Import Environment' %}</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
