--- a/environment_creation/templates/environment_creation/upload.html
+++ b/environment_creation/templates/environment_creation/upload.html
@@ -52,7 +52,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 								{% render_field field class='file-selector' %}
 									
 								<div class="input-group common-file-input">
-									<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
+									<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
 									<span class="input-group-btn input-group-sm">
 										<button type="button" class="btn btn-fab btn-fab-mini">
 											<i class="material-icons">attach_file</i>
