--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -82,7 +82,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                     <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
                                 </div>
                             {% else %}
-                                <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 text-center">
+                                <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6 col-lg-offset-3 col-md-offset-3 text-center">
                                     <button type="submit" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
                                 </div>
                             {% endif %}
