Adding crud buttons in resources view page

--- a/pdf_file/templates/pdf_file/_form.html
+++ b/pdf_file/templates/pdf_file/_form.html
@@ -278,7 +278,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 					{% endif %}
             	</div>
 
-            	<p><em>{% trans 'Attribute students to file link' %}:</em></p>
+            	<p><em>{% trans 'Attribute students to pdf file' %}:</em></p>
             	{% render_field form.students class='form-control' %}
 
             	<span id="helpBlock" class="help-block">{{ form.students.help_text }}</span>
@@ -298,7 +298,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
             	<br clear="all" />
 
-            	<p><em>{% trans 'Attribute groups to file link' %}:</em></p>
+            	<p><em>{% trans 'Attribute groups to pdf file' %}:</em></p>
             	{% render_field form.groups class='form-control' %}
 
             	<span id="helpBlock" class="help-block">{{ form.groups.help_text }}</span>
