--- a/mural/templates/mural/_form_comment.html
+++ b/mural/templates/mural/_form_comment.html
@@ -15,6 +15,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 <div class="modal-dialog" role="document">
 	<div class="modal-content">
+		<div class="modal_mural_loading" style="display: none">
+			<i class="fa fa-circle-o-notch fa-spin fa-4x text-success"></i>
+		</div>
 		<div class="modal-body">
 			<form id="comment-form" method="post" action="{{ form_url }}" enctype="multipart/form-data">
 				{% csrf_token %}
